--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "epic-spinners": "^1.1.0",
     "vue": "^2.6.10",
     "vue-fragment": "^1.5.1",
     "vue-router": "^3.0.3",
+    "vue-wait": "^1.3.3",
     "vuetify": "^1.5.13",
     "vuex": "^3.0.1",
     "webpack": "^4.30.0"
