--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "epic-spinners": "^1.1.0",
     "vue": "^2.6.10",
     "vue-fragment": "^1.5.1",
+    "vue-googlemaps": "^0.1.2",
     "vue-router": "^3.0.3",
     "vue-wait": "^1.3.3",
     "vuetify": "^1.5.13",
